--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,15 @@
 html {
     padding-top: 80px;
+    font-family: "Inter", sans-serif;
+}
+
+h1, h2, h3 {
+    font-family: "Playfair Display", serif;
 }
 
 body {
     background-color:#222222;
     color: #E0E0E0;
-    font-size: 18px;
 }
 
 
@@ -32,7 +36,11 @@ body {
     padding: 10px;
 }
 
-.button > a {
+.button:hover {
+    background-color: #303030;
+}
+
+.nav a {
     text-decoration: none;
     color: inherit;
 }
@@ -82,4 +90,19 @@ body {
     max-width: 700px;
     margin: 0 auto;
     line-height: 2;
+}
+
+/*** Contact Page ***/
+.contact {
+    text-align: center;
+}
+
+.contact a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.contact .link:hover {
+    color: #a7a7a7;
+    text-decoration: underline;
 }
