--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,11 @@ body {
     border-radius: 10%;
 }
 
+.preview:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
+}
+
 /*** About Me Page ***/
 .about {
     text-align: center;
